# hdt-cpp

./: CMakeLists.txt
libcds/: CMakeLists.txt
libcds/include/: libcdsBasics.h
libcds/src/static/textindex/: mmap.cpp
libcds/tests/: testSequence.cpp  timeSequence.cpp
libhdt/: CMakeLists.txt  Makefile.am
libhdt/include/: RDFParser.hpp
libhdt/src/bitsequence/: BitSequence375.cpp
libhdt/src/hdt/: BasicHDT.cpp  HDTSpecification.cpp
libhdt/src/util/: bitutil.h  filemap.cpp  stringutil.hpp
libhdt/tools/: CMakeLists.txt  hdt2rdf.cpp  hdtInfo.cpp  hdtSearch.cpp  modifyHeader.cpp  rdf2hdt.cpp  replaceHeader.cpp  searchHeader.cpp
