CMAKE_MINIMUM_REQUIRED(VERSION 2.8.7)

SET(CMAKE_INCLUDE_CURRENT_DIR 1)
SET(CMAKE_CXX_STANDARD 11)

SET(SERD_INCL_DIR ${PROJECT_SOURCE_DIR}/../serd/include)
SET(SERD_LIB_DIR ${PROJECT_SOURCE_DIR}/../serd/lib)

if(UNIX)
SET(SERD_LIB_PATH ${SERD_LIB_DIR}/libserd.a)
ENDIF()
IF(WIN32)
SET(SERD_LIB_PATH ${SERD_LIB_DIR}/serd.lib)
ENDIF()

SET(INCLUDES ${SERD_INCL_DIR} ${PROJECT_SOURCE_DIR}/libhdt/src/util)

add_compile_definitions(_CRT_SECURE_NO_WARNINGS)

add_subdirectory(libcds)
add_subdirectory(libhdt)